<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HistoryActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="93dp" />

    <TextView
        android:id="@+id/titlehistory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/history_of_countings"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline3" />

    <TextView
        android:id="@+id/bmi1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:text="@string/bmi1"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titlehistory" />

    <TextView
        android:id="@+id/bmi2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bmi2"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bmi1" />

    <TextView
        android:id="@+id/bmi3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bmi3"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bmi2" />

    <TextView
        android:id="@+id/bmi4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bmi4"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bmi3" />

    <TextView
        android:id="@+id/bmi5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bmi5"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bmi4" />

    <TextView
        android:id="@+id/bmi6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bmi6"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bmi5" />

    <TextView
        android:id="@+id/bmi7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bmi7"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bmi6" />

    <TextView
        android:id="@+id/bmi8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bmi8"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bmi7" />

    <TextView
        android:id="@+id/bmi9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bmi9"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bmi8" />

    <TextView
        android:id="@+id/bmi10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bmi10"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bmi9" />
</androidx.constraintlayout.widget.ConstraintLayout>